--- a/src/defaults.css
+++ b/src/defaults.css
@@ -449,4 +449,5 @@
   --drawer-content-bg-color: var(--neutral-white);
   --drawer-width: auto;
   --drawer-height: 100vh;
+  --drawer-zindex: 1200;
 }
